# StreamSightBackend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 062f768dc3bb_add_user_password_hash.py  08211223c402_rename_deleted_to_is_active.py  1db6f51d75ab_add_user_table.py  290ef626bb55_resize_user_email_column_512_to_1024.py  8312424ac228_inital.py  9f3c1a4b2d7e_add_refresh_tokens_table.py  a1b2c3d4e5f6_add_principals_and_user_principal.py  a7b8c9d0e1f2_protected_root_to_root_grade.py  b2c3d4e5f6a7_refresh_tokens_owner_to_principal.py  b8c9d0e1f2a3_create_records_and_record_categories.py  c3d4e5f6a7b8_add_admins_table.py  c846f7fdb12a_add_realtime_readings_table.py  c9d0e1f2a3b4_add_ix_records_created_at.py  d0e1f2a3b4c5_seed_300_records.py  d4e5f6a7b8c9_add_user_tier.py  e1d9c722650c_encrypt_user_email_column.py  e1f2a3b4c5d6_seed_10_admins.py  e5f6a7b8c9d0_add_admin_is_protected.py  f3e04d5de815_extract_identity_from_user.py  f6a7b8c9d0e1_admin_role_user_tier_to_int.py
app/: app.py  main.py
app/api/: __init__.py
app/core/: context.py  enums.py  logging.py  security.py
app/dtos/: __init__.py  auth.py  dto_auth.py  dto_monitoring.py  dto_record.py  dto_user.py  monitoring.py  user.py  ws.py
app/models/: __init__.py  admin.py  identity.py  principal.py  realtime_reading.py  record.py  record_category.py  refresh_token.py  user.py
app/repositories/: __init__.py  admin.py  base.py  identity.py  principal.py  record.py  record_category.py  refresh_token.py  repo_admin.py  repo_identity.py  repo_principal.py  repo_realtime_reading.py  repo_record.py  repo_record_category.py  repo_refresh_token.py  repo_user.py  user.py
app/services/: __init__.py  admin.py  auth.py  initial_admin.py  record.py  service_admin.py  service_auth.py  service_initial_admin.py  service_record.py  service_user.py  user.py
docs/: argon2-gil.md  exceptions.md  identity-constraints.md  logging.md  redis-keys-scan.md  salt-and-iv.md
scripts/: __init__.py  create_admin.py
tests/: conftest.py  payloads.py
(+175 files in other folders)
