[project]
name = "fastapi-foundation-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncmy>=0.2.11",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "redis[hiredis]>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "httpx-ws>=0.9.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
testpaths = ["tests"]
filterwarnings = [
    # SQLAlchemy 已知 quirk：constraint violation 後 fixture rollback 觸發
    # 不影響 test 正確性、抑制掉讓輸出乾淨
    "ignore:transaction already deassociated from connection:sqlalchemy.exc.SAWarning",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "alembic/versions",   # 自動產生的 migration 檔
]

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes（unused import 等）
    "I",       # isort（import 排序）
    "UP",      # pyupgrade（用新語法）
    "B",       # flake8-bugbear（常見 bug 模式）
    "SIM",     # flake8-simplify
]
ignore = [
    "E501",    # line-too-long（讓 formatter 管，不當 error）
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B008"]      # 允許 test 用 Depends() 當預設值
"app/api/**" = ["B008"]    # FastAPI Depends() 慣例，不是 bug

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["app", "tests"]
exclude = [
    "**/node_modules",  # Pylance 預設
    "**/.*",            # Pylance 預設
    "**/__pycache__",
    ".venv",
    "alembic/versions", # 自動產生
]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportUnusedImport = "warning"
